<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VarietiesActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/varieties_activity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:id="@+id/varieties_tiile"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/varieties_tiile">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_saxophone_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="230dp"
                android:src="@drawable/odmiany_saksofonu"
                android:layout_gravity="center_horizontal"/>


<!--SOPRANISSIMO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varities_sopranissimo_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sopranissimo"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/soprillo_piccolo_sopranissimo"
                android:layout_gravity="center_horizontal"/>

<!--SOPRANINO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_sopranino_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sopranino"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/sopranino"
                android:layout_gravity="center_horizontal"/>

<!--SOPRANO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_soprano_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon sopranowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/sopran"
                android:layout_gravity="center_horizontal"/>

<!--ALTO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_alto_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon altowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/alt"
                android:layout_gravity="center_horizontal"/>

<!--TENOR-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_tenor_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon tenorowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/tenor"
                android:layout_gravity="center_horizontal"/>

<!--BARYTON-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_baritone_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon barytonowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/baryton"
                android:layout_gravity="center_horizontal"/>

<!--BASS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_bass_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon basowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/bass"
                android:layout_gravity="center_horizontal"/>

<!--CONTRABASS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_contrabass_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon kontrabasowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/contrabass"
                android:layout_gravity="center_horizontal"/>

<!--SUBCONTRABASS-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varieties_subcontrabass_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon subkontrabasowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/subcontrabass"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"/>




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>