<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaphragmBreathingActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/embouchure_activity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="28sp"
        android:id="@+id/diaphragm_tiile"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaphragm_tiile">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/embouchure_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                />

            <!--PRZEPONA-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="umiejscowienie przepony"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:src="@drawable/przepona_jpg"
                android:layout_gravity="center_horizontal"
                />

            <!--SOPRANO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/embouchure_diaphragm_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saksofon sopranowy"
                android:layout_margin="2dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/sopran"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>